Create category page

--- a/public/public_asset/css/custom.css
+++ b/public/public_asset/css/custom.css
@@ -1,11 +1,9 @@
 .image {
 	height:135px;
+	position: relative;
 }
 .ee-product {
 	height: 344px;
-}
-
-.image {
 	position: relative;
 }
 
@@ -13,4 +11,14 @@
 	position: absolute;
 	bottom: 0;
 	width: 270px;
+}
+
+.row {
+	position: relative;
+}
+
+.no-product {
+	position: absolute;
+	right: 350px;
+	font-family: "Times New Roman", Times, serif;
 }
