--- a/public/public_asset/css/custom.css
+++ b/public/public_asset/css/custom.css
@@ -48,6 +48,7 @@
 .search-result {
 	margin-left: 300px;
 }
+
 .query {
 	color: #FF0000;
 }
@@ -91,4 +92,45 @@
 .filter-value {
 	font-weight: bold;
 	font-size: 18px;
+}
+
+.comment-list {
+    list-style: none;
+    padding-left: 0;
+}
+
+.comment-by {
+	width: 100%;
+    padding-bottom: 8px;
+    padding-top: 5px;
+    position: relative;
+}
+
+.comment-des {
+    margin-top: 20px;
+    padding: 10px 20px;
+    background-color: #fff;
+    border: 1px solid #e6e6e6;
+}
+
+.comment-time {
+    margin-left: 10px;
+    color: #999999;
+}
+
+.comment-by span.reply {
+    top: 5px;
+    right: 0;
+    position: absolute;
+    font-size: 14px;
+}
+
+.comment-by span.reply a {
+	color: #fff;
+    background-color: #669900;
+    padding: 3px 10px;
+}
+
+#replyForm h3 span {
+	margin-left: 10px;
 }
