--- a/public/public_asset/css/custom.css
+++ b/public/public_asset/css/custom.css
@@ -99,6 +99,10 @@
     padding-left: 0;
 }
 
+.comment-list li .children {
+	list-style: none;
+}
+
 .comment-by {
 	width: 100%;
     padding-bottom: 8px;
@@ -118,6 +122,15 @@
     color: #999999;
 }
 
+.replyForm {
+	margin-top: 20px;
+}
+
+.replyForm h3 a {
+	margin-left: 10px;
+	color: #007bff !important;
+}
+
 .comment-by span.reply {
     top: 5px;
     right: 0;
@@ -131,6 +144,3 @@
     padding: 3px 10px;
 }
 
-#replyForm h3 span {
-	margin-left: 10px;
-}
