fix code, order, promotion

--- a/public/admin_asset/css/custom.css
+++ b/public/admin_asset/css/custom.css
@@ -18,6 +18,12 @@
     top: 0;
     right: 0;
 }
+
+.image-list .delete-image {
+    position: absolute;
+    top: 0;
+    right: 0;
+}
 .image-list .delete-slide {
     position: absolute;
     top: 0;
