--- a/public/public_asset/css/custom.css
+++ b/public/public_asset/css/custom.css
@@ -221,3 +221,10 @@ form input {
 #scrollUp {
     bottom: 100px;
 }
+#filter-place {
+    list-style: none;
+    font-size: 16px;
+}
+.filter-list {
+    display: inline;
+}
