--- a/public/public_asset/css/custom.css
+++ b/public/public_asset/css/custom.css
@@ -232,3 +232,45 @@ form input {
     margin: auto;
     width: 50%;
 }
+.cpu
+{
+    width: 235px;
+}
+.hdd {
+    width: 140px;
+}
+
+/*Star Rating*/
+.star-rating {
+    direction: rtl;
+    display: inline-block;
+    padding: 20px;
+    display: flex;
+    position: absolute;
+    bottom: -16px;
+    left: 48px;
+}
+
+.star-rating input[type=radio] {
+    display: none
+}
+
+.star-rating label {
+    color: #bbb;
+    font-size: 18px;
+    padding: 0;
+    cursor: pointer;
+    -webkit-transition: all .3s ease-in-out;
+    transition: all .3s ease-in-out
+}
+
+.star-rating label:hover,
+.star-rating label:hover ~ label,
+.star-rating input[type=radio]:checked ~ label {
+    color: #f2b600
+}
+.star-result {
+    left: -22px;
+    top: 4px;
+    pointer-events: none;
+}
