--- a/public/admin_asset/css/custom.css
+++ b/public/admin_asset/css/custom.css
@@ -33,3 +33,9 @@
   text-align:center;
   border: 1px solid #212529;
 }
+.product-quantity {
+  display: inline-block;
+}
+.status-online {
+  color: chartreuse;
+}
